@@ -40,3 +40,4 @@ Patches (in no special order):
   * Dan Boger (:set online support)
   * Štěpán Němec (help copy-editing and favicon support)
   * Jarkko Oranen ('maxitems' option)
+  * Gary Katsevman ('private' option)
