@@ -304,6 +304,7 @@ section:Options[option-index]
 ||'pageinfo'|| Desired info on [c]:pa[geinfo][c] +
 ||'popups'|| Where to show requested popup windows +
 ||'previouspattern'|| Patterns to use when guessing the \'previous' page in a document sequence +
+||'private'|| Set the 'private browsing' option +
 ||'runtimepath'|| List of directories searched for runtime files +
 ||'scroll'|| Number of lines to scroll with [m]<C-u>[m] and [m]<C-d>[m] commands +
 ||'shell'|| Shell to use for executing [c]:![c] and [c]:run[c] commands +
