@@ -13,6 +13,9 @@
                { arg: true, count: true, motion: true, route: true });
     * IMPORTANT: shifted key notation now matches Vim's behaviour. E.g. <C-a>
       and <C-A> are equivalent, to map the uppercase character use <C-S-A>. - Is this still true, or going to be true? --djk
+    * add 'private' - enter private browsing mode IMPORTANT: this doesn't
+      currently cause Vimperator-specific data like command-line history to be
+      purged.
     * add -description option to :command
     * command-line options are now supported via the host application's
       -liberator option
